2006-10-24  Mike Cvet  <mcvet@redhat.com>

	* FCrash.java (.update): Changed TasksCrashObserver to iterating
	through Tasks and adding AttachedObserver.
	(TasksCrashObserver): Removed.

2006-10-24  Nurdin Premji  <npremji@redhat.com>

	* TestFStack.java: Ran GNU Formatter
	(secondaryThread): Added.
	(testMultiThreadedAckDaemon): Added.
	(testSingleThreadedDetached): Changed to use multiThreaded.
	(testStressMultiThreadedDetach): Added.
	(testSingleThreadedAckDaemon): Changed to use multiThreaded.
	(mainThread): Moved out of testSingleThreadedDetached.
	(testMultiThreadedDetached): 
	(multiThreaded): Added.	
	* FStack.java: Ran GNU Formatter. 
	(StackTasksObserver): Changed to use ProcBlockObserver.
	(scheduleStack): Changed to use ProcBlockObserver
	
2006-10-24  Andrew Cagney  <cagney@redhat.com>

	* TestFStack.java (testSingleThreadedAckDaemon): Mark as broken; 3420.

2006-10-24  Yong Zheng  <zhengyo@cn.ibm.com>

	* FCore.java (fillENotePrstatus): Add one register map array for 
	32-bit case on PPC64 and remove the "mq" register.

2006-10-23  Phil Muldoon  <pmuldoon@redhat.com>

	* FCore.java (abandonCoreDump): New.
	(CoreDumpTasksObserver): GNU Indent. Add comments.
	(CoreDumpTasksObserver.existingTask): Call abandonCoreDump, on each
	Exception case.
	(CoreDumpTasksObserver.removeObservers): Use proc.requestAbandon().
	(fillENotePrstatus): GNU Indent. Use abandonCoreDump on failure.
	(fillENotePrpsinfo, constructSectionData): GNU Indent.
	(fillENoteSection): Added JavaDoc. GNU Indent.
	(write_elf_file): Rewritten and broken up into smaller utility 
	functions.
	(buildElfHeader): New. Extrapolated from write_elf_file.
	(buildNotes): Ditto.
	(buildStringTable): Ditto.
	(CoreMapsBuilder.buildMap): GNU Indent.
	(MapsCounter.buildMap): Ditto.
	(main): GNU Indent and clean-up.
	(addOptions): GNU Indent and clean-up.

2006-10-23  Mike Cvet  <mcvet@redhat.com>

	* FCrash.java (SignalObserver.updateSignaled): Added switch to
	catch multiple signals.