@@ -1,3 +1,8 @@
+2006-10-24  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* FCore.java (run): Convert to using ProcBlockObserver.
+	(CoreDumpTasksObserver): Rebase on ProcBlockObserver.
+
 2006-10-24  Mike Cvet  <mcvet@redhat.com>
 
 	* FCrash.java (.update): Changed TasksCrashObserver to iterating
